# Drf-Library

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
auth/: admin.py  apps.py  models.py  tests.py
auth/api/: serializers.py  urls.py  views.py
auth/migrations/: 0001_initial.py
content/: admin.py  apps.py  models.py
content/api/: pagination.py  permissions.py  serializers.py  urls.py  views.py
content/migrations/: 0001_initial.py  0002_alter_book_is_active.py
favourite/: admin.py  models.py
favourite/api/: views.py
favourite/migrations/: 0001_initial.py
jsons/: author.json  books.json  category.json  publisher.json
muni/: asgi.py  settings.py  urls.py  wsgi.py
